# esp32liblame

./: CMakeLists.txt
src/: MP3EncoderLAME.h
src/liblame/: VbrTag.c  psymodel.c  psymodel.h  quantize.c  quantize_pvt.c  vbrquantize.c
